--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 */.env
 judge/pyenv
 judge/master/db.sqlite3
-judge/master/api/__pycache__
-judge/master/master/__pycache__
+*/__pycache__
+*/migrations
 
