--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 */.env
 judge/pyenv
 judge/master/db.sqlite3
-*/__pycache__
+judge/master/api/__pycache__
+judge/master/master/__pycache__
 judge/master/master/migrations
 judge/master/api/migrations
 
